--- a/CSharpBible/Calc/Calc32/Properties/Resources.resx
+++ b/CSharpBible/Calc/Calc32/Properties/Resources.resx
@@ -117,17 +117,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="btnClose" xml:space="preserve">
+    <value>Close</value>
+  </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="calculator_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\calculator_64.bmp;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Glow_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Glow_White.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Calc_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Calc_32.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Exit" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Exit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Glow_White" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Glow_White.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <comment>White glow</comment>
   </data>
 </root>
