--- a/Avalonia_Apps/Libraries/Avln_BaseLibTests/Properties/Resource.en.resx
+++ b/Avalonia_Apps/Libraries/Avln_BaseLibTests/Properties/Resource.en.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,170 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="btn1" xml:space="preserve">
-    <value>1</value>
-    <comment>@Invariant</comment>
+  <data name="Err_Range" xml:space="preserve">
+    <value>The value is not in the specified range {0} ({1}-{2})</value>
   </data>
-  <data name="btn1_x" xml:space="preserve">
-    <value>1/x</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn2" xml:space="preserve">
-    <value>2</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn3" xml:space="preserve">
-    <value>3</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn4" xml:space="preserve">
-    <value>4</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn5" xml:space="preserve">
-    <value>5</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn6" xml:space="preserve">
-    <value>6</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn7" xml:space="preserve">
-    <value>7</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn8" xml:space="preserve">
-    <value>8</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn9" xml:space="preserve">
-    <value>9</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnActions" xml:space="preserve">
-    <value>Actions</value>
-  </data>
-  <data name="btnBrClose" xml:space="preserve">
-    <value>)</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnBrOpen" xml:space="preserve">
-    <value>(</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnConfig" xml:space="preserve">
-    <value>Configuration</value>
-    <comment>Caption for Button "Config"</comment>
-  </data>
-  <data name="btnCos" xml:space="preserve">
-    <value>cos</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnC_CE" xml:space="preserve">
-    <value>C/CE</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnDecp" xml:space="preserve">
-    <value>.</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnDiv" xml:space="preserve">
-    <value>/</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnE" xml:space="preserve">
-    <value>e</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnEquals" xml:space="preserve">
-    <value>=</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnE_X" xml:space="preserve">
-    <value>eˣ</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnHistory" xml:space="preserve">
-    <value>History</value>
-  </data>
-  <data name="btnHome" xml:space="preserve">
-    <value>Home</value>
-  </data>
-  <data name="btnInv" xml:space="preserve">
-    <value>Inv</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnLog" xml:space="preserve">
-    <value>log</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMacros" xml:space="preserve">
-    <value>Macros</value>
-  </data>
-  <data name="btnMemClr" xml:space="preserve">
-    <value>MC</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMemMinus" xml:space="preserve">
-    <value>M-</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMemPlus" xml:space="preserve">
-    <value>M+</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMemRetr" xml:space="preserve">
-    <value>MR</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMemStore" xml:space="preserve">
-    <value>MS</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMinus" xml:space="preserve">
-    <value>-</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnMul" xml:space="preserve">
-    <value>*</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnNeg" xml:space="preserve">
-    <value>+/-</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnPi" xml:space="preserve">
-    <value>π</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnPlus" xml:space="preserve">
-    <value>+</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnProcess" xml:space="preserve">
-    <value>Process</value>
-  </data>
-  <data name="btnReports" xml:space="preserve">
-    <value>Reports</value>
-  </data>
-  <data name="btnSin" xml:space="preserve">
-    <value>sin</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnSqX" xml:space="preserve">
-    <value>√x</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnTan" xml:space="preserve">
-    <value>tan</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btnX2" xml:space="preserve">
-    <value>X²</value>
-    <comment>@Invariant</comment>
-  </data>
-  <data name="btn0" xml:space="preserve">
-    <value>0</value>
-    <comment>@Invariant</comment>
+  <data name="Err_Required" xml:space="preserve">
+    <value>The value may not be empty {0}</value>
   </data>
 </root>
