--- a/Avalonia_Apps/AA09_DialogBoxes/AA09_DialogBoxes/Properties/Resources.resx
+++ b/Avalonia_Apps/AA09_DialogBoxes/AA09_DialogBoxes/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>Open Question</value>
   </data>
   <data name="Description" xml:space="preserve">
-    <value>Tutorial #09: Handling of dialogboxes using Comunity-Toolkit</value>
+    <value>Tutorial #00: Handling of dialogboxes using Comunity-Toolkit</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="DialogView" type="System.Resources.ResXFileRef, System.Windows.Forms">
@@ -134,6 +134,6 @@
     <value>..\ViewModels\DialogViewModel.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="Title" xml:space="preserve">
-    <value>MVVM #09a CTDialogBoxes</value>
+    <value>MVVM #00 BaseTests</value>
   </data>
 </root>
