--- a/Avalonia_Apps/AA06_ValueConverter2/AA06_ValueConverter2/Properties/Resources.en.resx
+++ b/Avalonia_Apps/AA06_ValueConverter2/AA06_ValueConverter2/Properties/Resources.en.resx
@@ -138,4 +138,7 @@
   <data name="btnReports" xml:space="preserve">
     <value>Reports</value>
   </data>
+  <data name="txtPromptInput" xml:space="preserve">
+    <value>Here, you enter a floating-point value:</value>
+  </data>
 </root>
