Modularize UI: extract editor views into UserControls
Refactored MainWindow UI by introducing modular UserControls for tile list, tile editor, palette selection, and charmap. Replaced previous inline XAML sections with reusable controls. Added PaletteSelectionConverter and PaletteSelectionMode for flexible palette handling. Extended ViewModel with commands and collections for new controls. Updated resource files for charmap strings. Service configuration method in App.xaml.cs is now public. Improves maintainability and reusability of the editor UI.

--- a/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
+++ b/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
@@ -115,4 +115,10 @@
   <data name="PaletteBackgroundHeader" xml:space="preserve">
     <value>Palette Hintergrund</value>
   </data>
+  <data name="CharMapHeader" xml:space="preserve">
+    <value>Zeichenauswahl</value>
+  </data>
+  <data name="CharMapHint" xml:space="preserve">
+    <value>Wähle ein Zeichen zur schnellen Übernahme.</value>
+  </data>
 </root>
