Add tile list filtering and UI improvements
Added a filter textbox above the tile list, allowing users to filter tiles by name. Introduced a filtered view (TilesView) in the ViewModel, which updates automatically when the filter text changes. The tile list now uses a WrapPanel for better layout and binds glyph font to the selected font family. Added resource strings for "Font" and "Filter" labels and updated XAML to use them. The font selector label in the main window is now localized.

--- a/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
+++ b/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
@@ -121,4 +121,10 @@
   <data name="CharMapHint" xml:space="preserve">
     <value>Wähle ein Zeichen zur schnellen Übernahme.</value>
   </data>
+  <data name="FontSelectorLabel" xml:space="preserve">
+    <value>Schriftart:</value>
+  </data>
+  <data name="TileListFilterLabel" xml:space="preserve">
+    <value>Filter:</value>
+  </data>
 </root>
