Add TileSet metadata editing to UI and ViewModel
Added UI and ViewModel support for editing TileSet metadata (name, tile width, tile height). Introduced new properties and an ApplyTileSetChangesCommand in MainWindowViewModel to update all tiles when metadata changes. TileViewModel now supports dynamic resizing via ApplyDimensions. UI includes an Expander with input fields and a warning. Added localization strings for new UI elements. New tiles use the current TileSet dimensions. This enables centralized editing of TileSet base data with immediate effect on all tiles.

--- a/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
+++ b/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
@@ -127,4 +127,22 @@
   <data name="TileListFilterLabel" xml:space="preserve">
     <value>Filter:</value>
   </data>
+  <data name="TileSetDetailsHeader" xml:space="preserve">
+    <value>TileSet-Basisdaten</value>
+  </data>
+  <data name="TileSetNameLabel" xml:space="preserve">
+    <value>Name:</value>
+  </data>
+  <data name="TileSetWidthLabel" xml:space="preserve">
+    <value>Kachelbreite:</value>
+  </data>
+  <data name="TileSetHeightLabel" xml:space="preserve">
+    <value>Kachelhöhe:</value>
+  </data>
+  <data name="TileSetApplyWarning" xml:space="preserve">
+    <value>Hinweis: Änderungen wirken auf alle Kacheln. Beim Verkleinern gehen Glyphen ausserhalb des neuen Bereichs verloren.</value>
+  </data>
+  <data name="TileSetApplyButtonLabel" xml:space="preserve">
+    <value>Übernehmen</value>
+  </data>
 </root>
