Handle pending TileSet metadata changes explicitly
Added explicit handling for pending changes to TileSet metadata (name, width, height). The ViewModel now tracks unsaved changes and exposes commands to apply or discard them. The UI displays a visual indicator for unsaved changes, disables closing the Expander while changes are pending, and enables/disables the "Apply" and new "Discard" buttons accordingly. Shrink warnings are now only shown when relevant. New resource strings were added for the updated UI. This improves user safety and clarity when editing TileSet properties.

--- a/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
+++ b/CSharpBible/Games/VTileEdit.WPF/Properties/Strings.resx
@@ -142,7 +142,10 @@
   <data name="TileSetApplyWarning" xml:space="preserve">
     <value>Hinweis: Änderungen wirken auf alle Kacheln. Beim Verkleinern gehen Glyphen ausserhalb des neuen Bereichs verloren.</value>
   </data>
-  <data name="TileSetApplyButtonLabel" xml:space="preserve">
-    <value>Übernehmen</value>
+  <data name="TileSetPendingIndicator" xml:space="preserve">
+    <value>Nicht übernommene Änderungen vorhanden.</value>
+  </data>
+  <data name="TileSetDiscardButtonLabel" xml:space="preserve">
+    <value>Verwerfen</value>
   </data>
 </root>
