--- a/Avalonia_Apps/AA25_RichTextEdit/AA25_RichTextEdit/Properties/Resources.resx
+++ b/Avalonia_Apps/AA25_RichTextEdit/AA25_RichTextEdit/Properties/Resources.resx
@@ -122,7 +122,7 @@
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="RichTextEditView" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Views\RichTextEditView.xaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+    <value>..\Views\RichTextEditView.axaml;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
   <data name="RichTextEditViewModel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ViewModels\RichTextEditViewModel.cs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
